// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`testing.md scaffold > TypeScript Next.js project with vitest 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Testing — test-project

## Key Facts
**Detected:** Framework: Vitest
**Detected:** Test command: \`npm run test\`
**Detected:** Test files: 10

## Test Framework

**Detected:** vitest (confidence: 0.92)
**Evidence:**
- vitest in dependencies

## Test Structure
**Detected:** Test-to-source ratio: 10/50 (0.20)
**Unexamined:** Test file organization, naming conventions, directory structure

## Fixture Patterns
**Unexamined:** How fixtures are organized, setup/teardown patterns, shared fixtures

## Mocking
**Unexamined:** Mocking strategy, what gets mocked, mock libraries used

## Coverage
**Unexamined:** Coverage targets, coverage tools, what's excluded

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`testing.md scaffold > empty result (scan failed) 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Testing — test-project

## Key Facts
**Detected:** Test files: 0

## Test Framework

## Test Structure
**Unexamined:** Test file organization, naming conventions, directory structure

## Fixture Patterns
**Unexamined:** How fixtures are organized, setup/teardown patterns, shared fixtures

## Mocking
**Unexamined:** Mocking strategy, what gets mocked, mock libraries used

## Coverage
**Unexamined:** Coverage targets, coverage tools, what's excluded

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`testing.md scaffold > rich project with pytest testing and test structure 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Testing — test-project

## Key Facts
**Detected:** Framework: pytest
**Detected:** Test command: \`pytest\`
**Detected:** Test files: 25

## Test Framework

**Detected:** pytest (confidence: 1.00)
**Evidence:**
- pytest in dependencies
- pytest.ini found
- tests/ directory

## Test Structure
**Detected:** Test-to-source ratio: 25/80 (0.31)
**Unexamined:** Test file organization, naming conventions, directory structure

## Fixture Patterns
**Unexamined:** How fixtures are organized, setup/teardown patterns, shared fixtures

## Mocking
**Unexamined:** Mocking strategy, what gets mocked, mock libraries used

## Coverage
**Unexamined:** Coverage targets, coverage tools, what's excluded

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;
